DocImport 1.0.9
================================================================================
! CLI scripts were not being copied over
+ Added support for automatic update notification and installation
# [MEDIUM] Fatal error when purging SEF URL cache

DocImport 1.0.8
================================================================================
+ Database table installation, uninstallation and update is now handled by our own code instead of the unreliable JInstaller code
+ Automatically repair the database tables in case of an update going wrong
# [MEDIUM] Document generation in the CLI wouldn't get the correct URL to images

DocImport 1.0.7
================================================================================
+ gh-6 Added sh404SEF plugin to create SEF url with that component
~ Improved back-end display in Joomla! 3
~ AJAX ordering now shows the ordering in a textbox, to faciliate ordering without much frustration in Joomla! 3
~ Now using the built-in Joomla! extensions updater instead of Live Update to deliver updates
# [MEDIUM] Fatal error com_finder indexer
# [MEDIUM] The plugins didn't install
# [LOW] Very rarely an empty article would be generated every time you tried processing the DocBook XML files
# [MEDIUM] Fatal error com_finder indexer. Thanks Jurian!
# [MEDIUM] The plugins didn't install. Thanks Jurian!
# [LOW] Fixed page headings

DocImport 1.0.6
================================================================================
! An annoying –but harmless– fatal error was shown on upgrade from older versions

DocImport 1.0.5
================================================================================
# [LOW] Pre-installation script would run the wrong SQL files on upgrade (normally not causing a problem, but still it's not the intended behavior)
# [LOW] CLI CRON scripts not fully compatible with PHP CGI
# [LOW] Links to index.html are not replaced

DocImport 1.0.4