@@ -2,6 +2,7 @@ DocImport 1.0.9
 ================================================================================
 ! CLI scripts were not being copied over
 + Added support for automatic update notification and installation
++ Allow you to put books inside /media/com_docimport/books for better organisation
 # [MEDIUM] Fatal error when purging SEF URL cache
 
 DocImport 1.0.8
